{
    "name": "GameplayActions",
    "maps": [
        {
            "name": "Player",
            "id": "5fc8b0c1-056f-4cb3-a014-b121bf02fd49",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "d073dc10-d5af-448f-a475-ca0f50fc9e2e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Dodge",
                    "type": "Button",
                    "id": "e3491520-ec64-4858-a4dc-6e402fe6445c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "2bf0ef96-87bc-4b30-9374-7705e247a21e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChargedShot",
                    "type": "Button",
                    "id": "a399bda0-8978-4635-afb4-95a14723ada2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spell1",
                    "type": "Button",
                    "id": "ec9c250f-2885-445f-a03c-dbb5683c80c5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spell2",
                    "type": "Button",
                    "id": "d5881f0b-7642-4528-adf8-53db6c955739",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ConsumeHeat",
                    "type": "Button",
                    "id": "abcacc49-b884-478e-945e-f04063b6c260",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ConsumeHealth",
                    "type": "Button",
                    "id": "220b9635-408e-4db7-b6a7-b47f37eb1465",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThumbstickAim",
                    "type": "Value",
                    "id": "6a8dee2b-252a-464e-aed6-36010a88504c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseAim",
                    "type": "Value",
                    "id": "8dccb952-58cf-44e4-8dff-ee2773ecfcbd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "7c6cb5d8-fab6-41dd-a701-03c60b1dbd29",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "74968e03-8905-4d09-8276-22cf4fd19f5b",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone(min=0.5)",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22c4fe4b-fdb1-4f0a-bb9e-85acd96ecae3",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "daf3980c-0da0-47cd-bc46-1fb757a02874",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "44d360f4-cca2-44b1-b005-8b57f9603874",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d136b3c0-82ce-49b6-ad61-e52bc384fa72",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d4fbfb52-db99-4c44-8e81-306da2d7e984",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "01947d23-e6e0-4fcb-a162-0b5d87c503a6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "eb106605-e2be-401e-9989-981681f2fcde",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "Gamepad",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3e5fb813-9727-4085-8e93-3441c05a01df",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1114728b-fd67-4c10-a7ce-18a77f6f1963",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c2997bf-9746-4b95-9478-7b4f88bc619c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "04055ba9-a4ad-44ba-9cbe-a717c1ddf15a",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "Gamepad",
                    "action": "ChargedShot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eb262219-acbd-48db-b14e-358d2fbac6a7",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "ChargedShot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "efc483d5-4cf7-48bc-90a8-c6ca90416e43",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Spell2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a9bc944-351e-42eb-879c-e27bf87080b1",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Spell2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "03c18f35-0647-4d8c-8fcd-e15c5b6f6736",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spell1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c9ab1d7-482d-47c9-8488-96f5e7262df3",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spell1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c69db05-e636-4922-9102-eb5da325f7d6",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ConsumeHeat",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "242081dc-dfa0-4ce7-b6c7-7c64e8a950f2",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "ConsumeHeat",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e8a6552c-e4de-49b1-bb5f-085dd5e7b314",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ConsumeHealth",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "347ea350-9ed6-4b38-9ba9-4548cb8029f1",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "ConsumeHealth",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f5f09aa3-2e74-407c-8bcf-79e51191e223",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "Gamepad",
                    "action": "ThumbstickAim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c42f60a0-bbcd-4da8-b790-ab62454d480a",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "MouseAim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a501f3c-49d5-4092-aa6b-996cf46a3a85",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d01f54a-2d72-465d-b2aa-dbf81a194748",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardMouse",
            "bindingGroup": "KeyboardMouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}